# font-merge

./: .env  .gitignore  CLAUDE.md  FontMerge.spec  README.md  README_BUILD.md  build.bat  build.py  build.sh  build_and_package.py  build_and_package.sh  build_macos.py  build_macos.spec  create_dmg.py  create_simple_dmg.py  icon.icns  main.py  order.md  pyproject.toml  windows-installer.iss
src/font_merge/: __init__.py  font_info.py  font_merger.py  font_preview.py  font_selector.py  main.py
