[project]
name = "font-merge"
version = "0.1.0"
description = "PyQt6 desktop application for merging two fonts into a single font file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.58.4",
    "pillow>=11.2.1",
    "pyqt6>=6.9.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
font-merge = "font_merge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/font_merge"]
